@@ -10,7 +10,7 @@ local inputs = {
     tint = util.color("403630"),
     icon_layers = 1,
     make_remnants = false,
-    make_explosions = false,
+    -- make_explosions = false,
 }
 
 -- Reskin Warehouses
@@ -23,6 +23,8 @@ if reskins.angels and reskins.angels.triggers.storage.entities then
     if entity then
         inputs.group = "addons-storage"
         inputs.icon_name = "warehouse"
+        inputs.base_entity = "oil-refinery"
+        inputs.particles = {["big-tint"] = 5, ["medium"] = 2}
 
         reskins.lib.setup_standard_entity(name, 0, inputs)
 
@@ -137,6 +139,8 @@ if reskins.angels and reskins.angels.triggers.industries.entities then
     if entity then
         inputs.group = "addons-storage"
         inputs.icon_name = "big-chest"
+        inputs.base_entity = "storage-tank"
+        inputs.particles = {["big"] = 1}
 
         reskins.lib.setup_standard_entity(name, 0, inputs)
 
