@@ -9,7 +9,7 @@ local inputs = {
     mod = "angels",
     icon_layers = 1,
     make_remnants = false,
-    make_explosions = false,
+    -- make_explosions = false,
 }
 
 local logistic_map = {
@@ -38,6 +38,8 @@ if reskins.angels and reskins.angels.triggers.storage.entities then
         -- Setup icon details
         inputs.icon_name = "warehouse"
         inputs.icon_base = "logistic-warehouse-"..chest
+        inputs.base_entity = "oil-refinery"
+        inputs.particles = {["big-tint"] = 5, ["medium"] = 2}
 
         reskins.lib.setup_standard_entity(name, 0, inputs)
 
@@ -203,6 +205,8 @@ if reskins.angels and reskins.angels.triggers.industries.entities then
         -- Setup icon details
         inputs.icon_name = "big-chest"
         inputs.icon_base = "logistic-big-chest-"..chest
+        inputs.base_entity = "storage-tank"
+        inputs.particles = {["big"] = 1}
 
         reskins.lib.setup_standard_entity(name, 0, inputs)
 
